--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
     <main>
         <section class="portfolio">
             <div class="container">
-                <!-- Filters -->
+                <!-- Filter buttons -->
                 <h1 class="visually-hidden">Portfolio</h1>
                 <ul class="buttons list">
                     <li class="item"><button type="button" class="filter-button">All</button></li>
@@ -50,6 +50,7 @@
                     <li class="item"><button type="button" class="filter-button">Marketing</button></li>
                 </ul>
 
+                <!-- Project cards -->
                 <ul class="project-card list">
                     <li class="item">
                         <a href="" class="link">
