--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <!-- <header class="header">
     <div class="container">
       <nav class="navigation">
         <a href="./index.html" class="logo link">Web<span class="logo-span">Studio</span></a>
@@ -34,15 +34,15 @@
         </ul>
       </address>
     </div>
-  </header>
+  </header> -->
   <main>
     <!--Hero Page-->
-    <section class="hero-page">
+    <!-- <section class="hero-page">
       <div class="container">
         <h1 class="hero-page-title">Effective Solutions for Your Business</h1>
         <button type="button" class="hero-page-button" data-modal-open>Order Service</button>
       </div>
-    </section>
+    </section> -->
     <!--Section 1-->
     <section class="section-one">
       <div class="container">
@@ -100,7 +100,7 @@
       </div>
     </section>
     <!--Section 2-->
-    <section class="section-two">
+    <!-- <section class="section-two">
       <div class="container">
         <h2 class="section-two-title">What are we doing</h2>
         <ul class="list">
@@ -115,9 +115,9 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
     <!--Section 3-->
-    <section class="section-three">
+    <!-- <section class="section-three">
       <div class="container">
         <h2 class="section-three-header">Our Team</h2>
         <ul class="list">
@@ -273,9 +273,9 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
     <!--Section 4-->
-    <section class="section-four">
+    <!-- <section class="section-four">
       <div class="container">
         <h2 class="section-four-header">Customers</h2>
         <ul class="list">
@@ -323,9 +323,9 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
   </main>
-  <footer class="footer">
+  <!-- <footer class="footer">
     <div class="container">
       <div class="footer-text-box">
         <a href="./index.html" class="logo link">Web<span class="logo-footer">Studio</span></a>
@@ -377,10 +377,10 @@
         </form>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
   <!--Modal window-->
-  <div class="backdrop is-hidden" data-modal>
+  <!-- <div class="backdrop is-hidden" data-modal>
     <div class="modal">
       <button class="modal-btn" type="button" data-modal-close>
         <svg class="modal-btn-icon" width="8" height="8">
@@ -439,8 +439,8 @@
       </form>
 
     </div>
-  </div>
-  <script src="./js/modal.js"></script>
+  </div> -->
+  <!-- <script src="./js/modal.js"></script> -->
 </body>
 
 </html>
