Sections 2, 3, 4 and Hero page

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
   </header> -->
   <main>
     <!--Hero Page-->
-    <!-- <section class="hero-page">
+    <section class="hero-page">
       <div class="container">
         <h1 class="hero-page-title">Effective Solutions for Your Business</h1>
         <button type="button" class="hero-page-button" data-modal-open>Order Service</button>
       </div>
-    </section> -->
+    </section>
     <!--Section 1-->
     <section class="section-one">
       <div class="container">
@@ -100,7 +100,7 @@
       </div>
     </section>
     <!--Section 2-->
-    <!-- <section class="section-two">
+    <section class="section-two">
       <div class="container">
         <h2 class="section-two-title">What are we doing</h2>
         <ul class="list">
@@ -115,9 +115,9 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
     <!--Section 3-->
-    <!-- <section class="section-three">
+    <section class="section-three">
       <div class="container">
         <h2 class="section-three-header">Our Team</h2>
         <ul class="list">
@@ -273,9 +273,9 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
     <!--Section 4-->
-    <!-- <section class="section-four">
+    <section class="section-four">
       <div class="container">
         <h2 class="section-four-header">Customers</h2>
         <ul class="list">
@@ -323,7 +323,7 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
   </main>
   <!-- <footer class="footer">
     <div class="container">
