--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <!-- <header class="header">
+  <header class="header">
     <div class="container">
       <nav class="navigation">
         <a href="./index.html" class="logo link">Web<span class="logo-span">Studio</span></a>
@@ -27,14 +27,20 @@
         </ul>
       </nav>
       <address class="contacts">
-        <ul class="list">
-          <li class="item"><a href="mailto:info@devstudio.com" class="contacts-links link">info@devstudio.com</a></li>
-          <li class="item"><a href="tel:+110001111111" class="contacts-links link">+11 (000) 111-11-11</a>
+        <ul class="contacts-list list">
+          <li class="contacts-list-item"><a href="mailto:info@devstudio.com"
+              class="contacts-links link">info@devstudio.com</a></li>
+          <li class="contacts-list-item"><a href="tel:+110001111111" class="contacts-links link">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
+      <button class="menu-burger js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+        <svg class="menu-burger-icon" width="32" height="22">
+          <use href="./images/icons.svg#menu-hamburger-icon"></use>
+        </svg>
+      </button>
     </div>
-  </header> -->
+  </header>
   <main>
     <!--Hero Page-->
     <section class="hero-page">
@@ -105,13 +111,16 @@
         <h2 class="section-two-title">What are we doing</h2>
         <ul class="list">
           <li class="item">
-            <img src="./images/mainpage/img1.jpg" width="360" alt="Websites" />
+            <img src="./images/mainpage/img1.jpg"
+              srcset="./images/mainpage/img1.jpg 1x, ./images/mainpage/img1-2x.jpg 2x" width="360" alt="Websites" />
           </li>
           <li class="item">
-            <img src="./images/mainpage/img2.jpg" width="360" alt="Messengers" />
+            <img src="./images/mainpage/img2.jpg"
+              srcset="./images/mainpage/img2.jpg 1x, ./images/mainpage/img2-2x.jpg 2x" width="360" alt="Messengers" />
           </li>
           <li class="item">
-            <img src="./images/mainpage/img3.jpg" width="360" alt="Applications" />
+            <img src="./images/mainpage/img3.jpg"
+              srcset="./images/mainpage/img3.jpg 1x, ./images/mainpage/img3-2x.jpg 2x" width="360" alt="Applications" />
           </li>
         </ul>
       </div>
@@ -122,7 +131,9 @@
         <h2 class="section-three-header">Our Team</h2>
         <ul class="list">
           <li class="team-card">
-            <img src="./images/mainpage/mark-guerrero.jpg" alt="Mark Guerrero" width="264" height="260" />
+            <img src="./images/mainpage/mark-guerrero.jpg"
+              srcset="./images/mainpage/mark-guerrero.jpg 1x, ./images/mainpage/mark-guerrero2x.jpg 2x"
+              alt="Mark Guerrero" width="264" height="260" />
             <div class="card-content">
               <h3 class="section-three-list-header">Mark Guerrero</h3>
               <p class="section-three-list-text">Product Designer</p>
@@ -159,7 +170,9 @@
             </div>
           </li>
           <li class="team-card">
-            <img src="./images/mainpage/tom-ford.jpg" alt="Tom Ford" width="264" height="260" />
+            <img src="./images/mainpage/tom-ford.jpg"
+              srcset="./images/mainpage/tom-ford.jpg 1x, ./images/mainpage/tom-ford2x.jpg 2x" alt="Tom Ford" width="264"
+              height="260" />
             <div class="card-content">
               <h3 class="section-three-list-header">Tom Ford</h3>
               <p class="section-three-list-text">Frontend Developer</p>
@@ -196,7 +209,9 @@
             </div>
           </li>
           <li class="team-card">
-            <img src="./images/mainpage/camila-garcia.jpg" alt="Camila Garcia" width="264" height="260" />
+            <img src="./images/mainpage/camila-garcia.jpg"
+              srcset="./images/mainpage/camila-garcia.jpg 1x, ./images/mainpage/camila-garcia2x.jpg 2x"
+              alt="Camila Garcia" width="264" height="260" />
             <div class="card-content">
               <h3 class="section-three-list-header">Camila Garcia</h3>
               <p class="section-three-list-text">Marketing</p>
@@ -234,7 +249,9 @@
             </div>
           </li>
           <li class="team-card">
-            <img src="./images/mainpage/daniel-wilson.jpg" alt="Daniel Wilson" width="264" height="260" />
+            <img src="./images/mainpage/daniel-wilson.jpg"
+              srcset="./images/mainpage/daniel-wilson.jpg 1x, ./images/mainpage/daniel-wilson2x.jpg 2x"
+              alt="Daniel Wilson" width="264" height="260" />
             <div class="card-content">
               <h3 class="section-three-list-header">Daniel Wilson</h3>
               <p class="section-three-list-text">UI Designer</p>
@@ -325,7 +342,7 @@
       </div>
     </section>
   </main>
-  <!-- <footer class="footer">
+  <footer class="footer">
     <div class="container">
       <div class="footer-text-box">
         <a href="./index.html" class="logo link">Web<span class="logo-footer">Studio</span></a>
@@ -336,26 +353,26 @@
       </div>
       <div class="footer-socials-box">
         <p class="footer-socials-header">Social media</p>
-        <ul class="list">
-          <li class="item"> <a href="" class="link">
+        <ul class="footer-socials-list list">
+          <li class="footer-socials-item"> <a href="" class="footer-socials-link link">
               <svg class="footer-socials-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-instagram-2"></use>
               </svg>
             </a>
           </li>
-          <li class="item"> <a href="" class="link">
+          <li class="footer-socials-item"> <a href="" class="footer-socials-link link">
               <svg class="footer-socials-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-twitter-1"></use>
               </svg>
             </a>
           </li>
-          <li class="item"> <a href="" class="link">
+          <li class="footer-socials-item"> <a href="" class="footer-socials-link link">
               <svg class="footer-socials-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-facebook-1"></use>
               </svg>
             </a>
           </li>
-          <li class="item"> <a href="" class="link">
+          <li class="footer-socials-item"> <a href="" class="footer-socials-link link">
               <svg class="footer-socials-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-linkedin-1"></use>
               </svg>
@@ -377,10 +394,10 @@
         </form>
       </div>
     </div>
-  </footer> -->
+  </footer>
 
   <!--Modal window-->
-  <!-- <div class="backdrop is-hidden" data-modal>
+  <div class="backdrop is-hidden" data-modal>
     <div class="modal">
       <button class="modal-btn" type="button" data-modal-close>
         <svg class="modal-btn-icon" width="8" height="8">
@@ -439,8 +456,66 @@
       </form>
 
     </div>
-  </div> -->
-  <!-- <script src="./js/modal.js"></script> -->
+  </div>
+
+  <!-- Mobile menu -->
+  <div class="menu-container js-menu-container" id="mobile-menu">
+    <button class="modal-btn js-close-menu">
+      <svg class="modal-btn-icon" width="8" height="8">
+        <use href="./images/icons.svg#icon-close-modal"></use>
+      </svg>
+    </button>
+
+    <ul class="mobile-menu">
+      <li class="item"><a href="./index.html" class="link current">Studio</a></li>
+      <li class="item"><a href="./portfolio.html" class="link">Portfolio</a></li>
+      <li class="item"><a href="" class="link">Contacts</a></li>
+    </ul>
+
+    <div class="mobile-menu-footer">
+      <address class="menu-container-contacts">
+        <ul class="menu-container-contacts-list list">
+          <li class="contacts-list-item"><a href="tel:+110001111111" class="link phone">+11 (000)
+              111-11-11</a>
+          </li>
+          <li class="contacts-list-item"><a href="mailto:info@devstudio.com" class="link email">info@devstudio.com</a>
+          </li>
+        </ul>
+      </address>
+
+      <ul class="footer-socials-list list">
+        <li class="footer-socials-item"> <a href="" class="footer-socials-link link">
+            <svg class="footer-socials-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-instagram-2"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-socials-item"> <a href="" class="footer-socials-link link">
+            <svg class="footer-socials-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-twitter-1"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-socials-item"> <a href="" class="footer-socials-link link">
+            <svg class="footer-socials-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-facebook-1"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-socials-item"> <a href="" class="footer-socials-link link">
+            <svg class="footer-socials-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-linkedin-1"></use>
+            </svg>
+          </a>
+        </li>
+    </div>
+  </div>
+
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+    integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+    crossorigin="anonymous"></script>
+  <script src="./js/mobile-menu.js"></script>
+  <script src="./js/modal.js"></script>
 </body>
 
 </html>
